# opengl-web

./: Cargo.toml  build.rs
.cargo/: config.toml
assets/: fragment.glsl  vertex.glsl
lib/gl/: Cargo.toml  build.rs
lib/gl/src/: buffer.rs  capabilities.rs  lib.rs  program.rs  rendering.rs  shader.rs  state.rs  vertex_array.rs  vertex_attrib.rs
lib/gl_raw_handle_derive/: Cargo.toml
lib/gl_raw_handle_derive/src/: lib.rs
src/: emscripten.rs  imgui.frag  imgui.vert  imgui_wrapper.rs  key_codes.rs  main.rs  mouse_buttons.rs  program.rs  resources.rs  shader.rs  texture.rs
