[package]
name = "opengl-web"
keywords = ["WebGL", "Rust"]
version = "0.1.0"
edition = "2021"

[target.'cfg(not(target_os = "emscripten"))'.dependencies.sdl2]
version = "0.36.0"
features = ['bundled', 'static-link']

[dependencies]
sdl2 = "0.36.0"
# imgui = "0.11.0"
gl = "0.14.0"
# nalgebra-glm = "0.18.0"
# stb_image = "0.2.5"
thiserror = "1.0.40"
# noise = "0.8.2"
anyhow = "1.0.70"
# once_cell = "1.18.0"
